@@ -7,6 +7,7 @@
 5. Make each artist clickable in album list sub-titles.
 6. Use composer as sub-title for Works search results.
 7. Fix treeview rendering.
+8. Don't exclude current artist from album-subtitle click menu.
 
 5.4.2
 -----
